--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.35.2",
     "@vueuse/core": "^10.9.0",
     "@vueuse/head": "^2.0.0",
     "compression": "^1.7.4",
     "express": "^4.19.2",
+    "pinia": "^2.1.7",
     "sirv": "^2.0.4",
     "tsx": "^4.9.3",
     "vue": "^3.4.23",
@@ -46,11 +48,13 @@
     "cspell": "^7.3.6",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-code-import-patterns": "^3.0.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "rollup-plugin-analyzer": "^4.0.0",
+    "sass": "^1.77.0",
     "stylelint": "^15.11.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
