--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "sirv": "^2.0.4",
     "tsx": "^4.9.3",
     "vue": "^3.4.23",
+    "vue-i18n": "9",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/types": "^19.0.3",
+    "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@kwai-explore/eslint-config": "^0.6.0",
     "@kwai-explore/stylelint-config": "^0.1.0",
     "@kwai-explore/tsconfig": "^0.0.3",
