--- a/package.json
+++ b/package.json
@@ -24,10 +24,9 @@
     "@vueuse/head": "^2.0.0",
     "compression": "^1.7.4",
     "express": "^4.19.2",
-    "pinia": "^2.1.7",
     "sirv": "^2.0.4",
     "tsx": "^4.9.3",
-    "vue": "^3.4.23",
+    "vue": "^3.4.27",
     "vue-i18n": "9",
     "vue-router": "^4.3.2"
   },
@@ -45,6 +44,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/runtime-core": "^3.4.27",
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
     "cspell": "^7.3.6",
